@startuml

package states {
    class Memento {
        - state: String
        .. Constructor ..
        + Memento(state: String): void
        .. Getter ..
        + getState(): String
    }

    class Originator {
        - state: String
        .. Setter ..
        + setState(state: String): void
        .. Getter ..
        + getState(): String
        .. Other ..
        + saveStateToMemento(): Memento
        + recoverStateFromMemento(memento: Memento): void
    }

    class CareTaker {
        - mementos: List<Memento> = new ArrayList<>()
        .. Other ..
        + add(memento: Memento): void
        + get(index: int): Memento
    }
}

class Client {
    + {static} main(): void
}

Originator --> Memento
CareTaker o--> Memento

Client -> states

@enduml
















